<resources>
    <string name="app_name">Test</string>
    <string name="api_key">******************************</string>

    <!-- Hints -->
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password (min 8 characters):</string>
    <string name="password_confirm">Confirm password</string>
    <string name="country_code">Country code:</string>
    <string name="phone">Phone number:</string>
    <string name="address">Address:</string>
    <string name="confirm">Confirm</string>

    <!-- Errors -->
    <string name="name_empty">Field name can not be empty</string>
    <string name="email_empty">Field email can not be empty</string>
    <string name="email_bad">Wrong email address</string>
    <string name="phone_empty">Field phone can not be empty</string>
    <string name="phone_shirt">Phone number is too shirt</string>
    <string name="phone_without_plus">Phone number must begin with +</string>
    <string name="phone_numbers">Phone number may only contain numbers and +</string>
    <string name="phone_bad">Phone is wrong</string>
    <string name="country_code_bad">There is no such country code</string>
    <string name="address_empty">Field address can not be empty</string>
    <string name="password_empty">Field password can not be empty</string>
    <string name="password_weak">Password must contain at least one number,
        upper case and down case characters</string>
    <string name="password_bad">Password is too simple</string>
    <string name="password_shirt">Password is too short (min 8 characters)</string>
    <string name="passwords_not_same">Passwords is not the same</string>

    <!-- Others -->
    <string name="hand_address_input">Enter the address manually</string>
    <string name="Success_adding">Record added successfully</string>


</resources>
