<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".UserActivity"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/hand_address_input"
        android:gravity="center"
        android:id="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/address"/>
    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnYes"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/confirm"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
</LinearLayout>